# UBB_ZTP

./: .gitignore  ImageProcessingSystem.sln  README.md  UBB_ZTP.sln
GCPerformance/: GCPerformance.csproj  Program.cs
GCPerformance/Algorithms/: EdgeDetectionKernel.cs  IPixelProcessor.cs  StandardPixelProcessor.cs  UnsafePixelProcessor.cs  VectorizedPixelProcessor.cs
GCPerformance/Configuration/: BenchmarkProfileBuilder.cs  BenchmarkProfiles.cs
GCPerformance/Core/: BenchmarkParameters.cs  BenchmarkResult.cs  GarbageCollectionStrategy.cs  IBenchmarkStrategy.cs  StrategySelector.cs
GCPerformance/Execution/: BenchmarkRunner.cs  ResultsReporter.cs
GCPerformance/Strategies/: ManagedBenchmarkStrategy.cs  PooledBenchmarkStrategy.cs  UnsafeBenchmarkStrategy.cs  VectorizedBenchmarkStrategy.cs
ImageProcessing.CUDA/: ImageProcessing.CUDA.csproj  NativeMethods.cs  Program.cs
ImageProcessing.Client/: ImageProcessing.Client.csproj  Program.cs
ImageProcessing.Server/: ImageProcessing.Server.csproj  Program.cs
ImageProcessing.Shared/: ImageProcessing.Shared.csproj
ImageProcessing.Shared/Models/: ImageProcessingRequest.cs  ImageProcessingResponse.cs
ImageProcessing.Shared/Services/: BlurProcessor.cs  ImageProcessor.cs
ImageProcessing.Shared/Utils/: BitmapUtil.cs
docker/: docker-compose.yml  rabbitmq.conf
server_cuda/: CMakeLists.txt  image_kernels.cu  image_kernels.h
